@@ -1,111 +1,134 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=DM+Sans:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&family=JetBrains+Mono:wght@400;500&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* Hauzisha Design System — Royal Blue Property Platform */
-
 @layer base {
   :root {
-    --background: 220 20% 97%;
-    --foreground: 222 47% 11%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222 47% 11%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222 47% 11%;
-
-    --primary: 221 83% 53%;
-    --primary-foreground: 0 0% 100%;
-
-    --secondary: 220 20% 94%;
-    --secondary-foreground: 222 47% 11%;
-
-    --muted: 220 14% 92%;
-    --muted-foreground: 220 10% 46%;
-
-    --accent: 43 96% 56%;
-    --accent-foreground: 222 47% 11%;
-
-    --destructive: 0 86% 54%;
-    --destructive-foreground: 0 0% 100%;
-
-    --border: 220 13% 89%;
-    --input: 220 13% 89%;
-    --ring: 221 83% 53%;
-
-    --radius: 0.625rem;
-
-    --sidebar-background: 0 0% 100%;
-    --sidebar-foreground: 222 47% 11%;
-    --sidebar-primary: 221 83% 53%;
+    --background:        218 26% 94%;
+    --foreground:        222 45% 10%;
+    --card:              0 0% 100%;
+    --card-foreground:   222 45% 10%;
+    --popover:           0 0% 100%;
+    --popover-foreground:222 45% 10%;
+    --primary:           221 82% 50%;
+    --primary-foreground:0 0% 100%;
+    --secondary:         218 22% 90%;
+    --secondary-foreground:222 45% 10%;
+    --muted:             218 18% 88%;
+    --muted-foreground:  220 12% 48%;
+    --accent:            38 95% 53%;
+    --accent-foreground: 32 88% 24%;
+    --destructive:       0 84% 52%;
+    --destructive-foreground:0 0% 100%;
+    --border:            218 16% 86%;
+    --input:             218 16% 86%;
+    --ring:              221 82% 50%;
+    --radius:            0.625rem;
+    --sidebar-background:  222 44% 10%;
+    --sidebar-foreground:  210 30% 84%;
+    --sidebar-primary:     221 82% 62%;
     --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 220 14% 92%;
-    --sidebar-accent-foreground: 222 47% 11%;
-    --sidebar-border: 220 13% 89%;
-    --sidebar-ring: 221 83% 53%;
+    --sidebar-accent:      222 40% 16%;
+    --sidebar-accent-foreground: 210 30% 92%;
+    --sidebar-border:      222 36% 17%;
+    --sidebar-ring:        221 82% 62%;
   }
 
   .dark {
-    --background: 222 47% 6%;
-    --foreground: 210 40% 96%;
-
-    --card: 222 47% 9%;
-    --card-foreground: 210 40% 96%;
-
-    --popover: 222 47% 9%;
-    --popover-foreground: 210 40% 96%;
-
-    --primary: 221 83% 60%;
-    --primary-foreground: 0 0% 100%;
-
-    --secondary: 222 47% 14%;
-    --secondary-foreground: 210 40% 96%;
-
-    --muted: 222 47% 12%;
-    --muted-foreground: 220 10% 56%;
-
-    --accent: 43 96% 56%;
-    --accent-foreground: 222 47% 11%;
-
-    --destructive: 0 86% 54%;
-    --destructive-foreground: 0 0% 100%;
-
-    --border: 222 47% 14%;
-    --input: 222 47% 14%;
-    --ring: 221 83% 60%;
-
-    --sidebar-background: 222 47% 9%;
-    --sidebar-foreground: 210 40% 96%;
-    --sidebar-primary: 221 83% 60%;
+    --background:        222 46% 7%;
+    --foreground:        210 38% 95%;
+    --card:              222 44% 10%;
+    --card-foreground:   210 38% 95%;
+    --popover:           222 44% 10%;
+    --popover-foreground:210 38% 95%;
+    --primary:           221 82% 58%;
+    --primary-foreground:0 0% 100%;
+    --secondary:         222 44% 15%;
+    --secondary-foreground:210 38% 95%;
+    --muted:             222 44% 13%;
+    --muted-foreground:  220 12% 58%;
+    --accent:            38 95% 53%;
+    --accent-foreground: 222 45% 10%;
+    --destructive:       0 84% 52%;
+    --destructive-foreground:0 0% 100%;
+    --border:            222 44% 16%;
+    --input:             222 44% 16%;
+    --ring:              221 82% 58%;
+    --sidebar-background:  222 50% 7%;
+    --sidebar-foreground:  210 30% 84%;
+    --sidebar-primary:     221 82% 62%;
     --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 222 47% 12%;
-    --sidebar-accent-foreground: 210 40% 96%;
-    --sidebar-border: 222 47% 14%;
-    --sidebar-ring: 221 83% 60%;
+    --sidebar-accent:      222 44% 13%;
+    --sidebar-accent-foreground: 210 30% 92%;
+    --sidebar-border:      222 44% 14%;
+    --sidebar-ring:        221 82% 62%;
   }
 }
 
 @layer base {
-  * {
+  *, *::before, *::after {
     @apply border-border;
+    box-sizing: border-box;
+  }
+
+  html {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
   }
 
   body {
     @apply bg-background text-foreground;
-    font-family: 'DM Sans', sans-serif;
+    font-family: 'DM Sans', system-ui, sans-serif;
+    font-size: 15px;
+    line-height: 1.6;
   }
 
-  h1, h2, h3 {
-    font-family: 'Playfair Display', serif;
+  .font-display, h1, h2, h3 {
+    font-family: 'Playfair Display', Georgia, serif;
+  }
+
+  code, pre, .font-mono {
+    font-family: 'JetBrains Mono', ui-monospace, monospace;
+    font-size: 0.8125em;
+  }
+
+  ::-webkit-scrollbar { width: 4px; height: 4px; }
+  ::-webkit-scrollbar-track { background: transparent; }
+  ::-webkit-scrollbar-thumb {
+    background: hsl(var(--muted-foreground) / 0.22);
+    border-radius: 99px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: hsl(var(--muted-foreground) / 0.42);
   }
 }
 
 @layer components {
-  /* Auth input focus glow in royal blue */
   .auth-input:focus {
-    box-shadow: 0 0 0 3px hsl(221 83% 53% / 0.15);
+    box-shadow: 0 0 0 3px hsl(221 82% 50% / 0.15);
+    border-color: hsl(var(--primary));
+  }
+
+  .card-hover {
+    @apply transition-all duration-200 ease-out;
+    box-shadow: 0 1px 3px rgba(14,30,65,0.05), 0 1px 2px rgba(14,30,65,0.03);
+  }
+  .card-hover:hover {
+    box-shadow: 0 8px 24px rgba(14,30,65,0.09), 0 2px 8px rgba(14,30,65,0.05);
+    transform: translateY(-2px);
+  }
+
+  .img-zoom-wrap { @apply overflow-hidden; }
+  .img-zoom-wrap img { @apply transition-transform duration-500 ease-out; }
+  .img-zoom-wrap:hover img { transform: scale(1.05); }
+
+  .gold-pill {
+    @apply inline-flex items-center gap-1 text-xs font-semibold px-2.5 py-0.5 rounded-full;
+    background: hsl(38 95% 53% / 0.12);
+    color: hsl(32 88% 34%);
+    border: 1px solid hsl(38 95% 53% / 0.28);
   }
 }
